# image_palette

./: .gitignore  Cargo.toml  LICENSE  README.md
src/: error.rs  lib.rs
tests/: palette.rs
