[package]
name = "image-palette"
version = "0.1.5"
edition = "2021"
license = "MIT"
description = "A Rust library for automatically extracting prominent color palettes from images."

repository = "https://github.com/siminx/image_palette"
homepage = "https://github.com/siminx/image_palette"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
image = "0.25"
lab = { version = "0.11", optional = true }

[features]
lab = ["dep:lab"]